--- a/css/scroller.css
+++ b/css/scroller.css
@@ -5,17 +5,28 @@
   
   /* Track */
   ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
-    border-radius: 5px;
+    background: #000; 
   }
    
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: red; 
-    border-radius: 5px;
+    /* background: red; */
+    border-radius: 10px;
+	  background-image: -webkit-gradient(linear,
+									   left bottom,
+									   left top,
+									   color-stop(0.85, rgb(28,58,168)),
+									   color-stop(0.55, rgb(0, 71, 146)),
+									   color-stop(0.30, rgb(118, 171, 223)));
   }
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #b30000; 
-  } 
+    /* background: #b30000;  */
+    background-image: -webkit-gradient(linear,
+									   left bottom,
+									   left top,
+									   color-stop(0.85, rgb(28,58,168)),
+									   color-stop(0.55, rgb(50, 91, 196)),
+									   color-stop(0.30, rgb(168, 191, 243)));
+  }
